<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Split Check: Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_event">Add event</string>
    <string name="no_active_events">You don`t have any active events yet</string>
    <string name="sum">Sum: %1$s %2$s</string>
    <string name="organizer">Organizer: %1$s</string>
    <string name="participants">Participants: %1$s</string>
    <string name="participants_clear">Participants</string>
    <string name="ok">OK</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="rubble">₽</string>
    <string name="required_field">Required*</string>
    <string name="awesome_name">Awesome name</string>
    <string name="event_name">Event name</string>
    <string name="name_cant_be_empty">Name could`t be empty</string>
    <string name="event_name_cant_be_empty">Event name could`t be empty</string>
    <string name="enter_participant_name">Enter name of participant</string>
    <string name="add_participant">Add participant</string>
    <string name="add_to_friends_list">Add a friends</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="more_info">More</string>
    <string name="and_other">and other</string>
    <string name="add_purchase">Add purchase</string>
    <string name="purchases">Purchases:</string>
    <string name="options">OPTIONS</string>
    <string name="debtors">Debtors:</string>
    <string name="purchase_name">Purchase name:</string>
    <string name="purchase_name_no_ending">Purchase name</string>
    <string name="participant_list">List participants</string>
    <string name="change_event_name">Change event name</string>
    <string name="accept">Accept</string>
    <string name="choose_buyer">Select buyer</string>
    <string name="purchase_creating">Purchase</string>
    <string name="select_debtors_multiple_choice">Select debtors (multiple choice)</string>
    <string name="cost">Cost (max 99999)</string>
    <string name="zero">0</string>
    <string name="numbers">0123456789</string>
    <string name="confirm">Confirm</string>
    <string name="Next">Next</string>
    <string name="enter_name_of_purchase">Enter name of purchase</string>
    <string name="enter_cost_of_the_purchase">Enter cost of the purchase</string>
    <string name="purchase_must_have_buyer_and_debtors">Purchase must have debtors</string>
    <string name="skip">Skip</string>
    <string name="additional_cost">Additional spending</string>
    <string name="delete_event">Delete event</string>
    <string name="redact_event">Redact event</string>
    <string name="cancel">Cancel</string>
    <string name="more_details">More details</string>
    <string name="delete_purchase">Delete purchase?</string>
    <string name="go_back">Go Back</string>
    <string name="theme_choose">Theme selection</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="language_selection">Language selection</string>
    <string name="value_selection">Value selection</string>
    <string name="calculate">Calculate</string>
    <string name="results">Result</string>
    <string name="share">Share</string>
    <string name="buyer">Buyer:</string>
    <string name="share_calculation">Share calculation</string>
    <string name="cost_purchase">Cost:</string>
    <string name="name_cant_be_1_digit">Name must contains at least 2 letters</string>
    <string name="ru_en_digits">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNMйцукенгшщзхъфывапролджэячсмитьбюЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮ</string>
    <string name="nothing_to_calculate">Nothing to calculate</string>
    <string name="debtors_example_message">Select the participants who should split the purchase amount.\nExample: Participant A ordered sushi for 999 currency units. Participant A, Participant B and Participant C ate sushi.\nThen you need to select all participants from A to C, as a result, Participant B and C will owe Participant A 333 units of currency.</string>
    <string name="debtors_example_title">Select debtors example</string>
    <string name="additional_example_message">Here you can add individual additional expenses.\nExample: If you took a set of 5 pizzas for the company for 1000 currency units, but Participant A chose a pizza that increases the price of the set by 100 currency units, then when calculating 1000 currency units will be divided among all debtors, and 100 currency units will be added to Participant A`s debt individually.\nYou can also leave the total amount zero and enter the debt amounts individually for each participant.</string>
    <string name="additional_example_title">Additional debts example</string>
    <string name="you_don_t_have_any_purchases_for_this_event_yet">You don\'t have any purchases for this event yet</string>
    <string name="purchase">Purchase</string>
    <string name="event_calculator_techhelp_gmail_com">event.calculator.techhelp@gmail.com</string>
    <string name="tech_support">Tech support:</string>
    <string name="change_my_name">Change my name</string>
</resources>