<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".presentation.fragment.PurchaseFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="140dp">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/purchase_creating"
                android:theme="@style/TitleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                style="@style/InputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:hint="@string/purchase_name_no_ending"
                app:counterEnabled="true"
                app:counterMaxLength="24"
                app:endIconDrawable="@drawable/baseline_cancel_24"
                app:endIconMode="clear_text"
                app:endIconTint="@color/mainColor"
                app:helperText="@string/required_field"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTxt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/purchaseNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="24"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/selectBuyerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/choose_buyer"
                android:theme="@style/TitleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/buyerRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="true"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/selectBuyerText" />

            <TextView
                android:id="@+id/selectDebtorsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/select_debtors_multiple_choice"
                android:theme="@style/TitleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buyerRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/debtorsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="true"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/selectDebtorsText" />

            <TextView
                android:id="@+id/costText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/cost"
                android:theme="@style/TitleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/debtorsRecycler" />

            <EditText
                android:id="@+id/costEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/cost_edit_text_background"
                android:digits="@string/numbers"
                android:elevation="4dp"
                android:fontFamily="@font/lato_regular"
                android:inputType="number"
                android:lines="1"
                android:maxLength="5"
                android:paddingVertical="5dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@id/guideline80"
                app:layout_constraintStart_toStartOf="@id/guideline20"
                app:layout_constraintTop_toBottomOf="@+id/costText" />

            <SeekBar
                android:id="@+id/costBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:max="9999"
                android:min="0"
                android:progress="0"
                android:progressDrawable="@drawable/seekbar_style"
                android:splitTrack="false"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/costEditText" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.20" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.80" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/softMainColor"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/additional_cost"
        android:textColor="@color/alternative"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_add_24"
        app:iconGravity="textEnd"
        app:iconSize="24dp"
        app:iconTint="@color/alternative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/alternativeMain" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/softMainColor"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp"
        android:text="@string/confirm"
        android:textColor="@color/alternative"
        android:textSize="18sp"
        android:textStyle="bold"
        app:icon="@drawable/done_vector"
        app:iconGravity="textEnd"
        app:iconSize="32dp"
        app:iconTint="@color/alternative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/alternativeMain" />

</androidx.constraintlayout.widget.ConstraintLayout>