<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingBottom="32dp">

        <TextView
            android:id="@+id/settingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/settings"
            android:textSize="24sp"
            android:theme="@style/TitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/goBackLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/settingText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settingText">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:tint="@color/vectorImageSoftColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/go_back"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/themeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/theme_choose"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goBackLayout" />

        <RadioGroup
            android:id="@+id/toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/control_switch_background_border"
            android:checkedButton="@+id/darkTheme"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/themeText">

            <RadioButton
                android:id="@+id/lightTheme"
                style="@style/SubTitleText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:background="@drawable/control_switch_background_selector"
                android:button="@null"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/light_theme"
                android:textColor="@color/control_switch_color_selector" />

            <RadioButton
                android:id="@+id/darkTheme"
                style="@style/SubTitleText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/control_switch_background_selector"
                android:button="@null"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/dark_theme"
                android:textColor="@color/control_switch_color_selector" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>